fixed screen overflow

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ html {
 }
 
 .board {
-  width: 100%;
+  min-width: 90%;
   display: flex;
   gap: 12px;
   flex-wrap:wrap;
@@ -159,6 +159,7 @@ button.critical {
   width: 100%;
   padding: 2rem;
   background-color: #f5f5f5;
+  position: relative;
 }
 
 .task-actions {
@@ -255,7 +256,7 @@ h4{
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
   z-index: 10;
   min-height: 50vh;
-  min-width: 50%;
+  min-width: 40%;
 }
 
 .edit-window input,
