--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,10 @@
 :root {
   margin: 0;
 }
-*{
+* {
+  box-sizing: border-box;
   margin: 0;
-}
+ }
 body {
   margin: 0;
   /* place-items: center; */
